bug fixen en verwijderen van syntactische fouten

--- a/cookies.html
+++ b/cookies.html
@@ -5,18 +5,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>recepten</title>
 	</head>
-	<h1>Recepten voor het ideeal 4 uurtje</h1>
+	<body>
+		<h1>Recepten voor het ideeal 4 uurtje</h1>
 
-	<ul>
-		<li><a href="index.html">pannenkoeken</a></li>
-		<li><a href="pannenkoeken.html">Quatre-Quart</a></li>
-		<li><a href="cookies.html">cookies</a></li>
+		<ul>
+			<li><a href="index.html">pannenkoeken</a></li>
+			<li><a href="pannenkoeken.html">Quatre-Quart</a></li>
+			<li><a href="cookies.html">cookies</a></li>
+		</ul>
 
-		<img src="images/cookies.jpg.webp"
-	</ul>
+		<img src="images/cookies.jpg.webp" />
 
-	<h2>Ingredienten<h2>
-		
+		<h2>Ingredienten</h2>
+
 		<ul>
 			<li>130 gr boter (kamertemperatuur)</li>
 			<li>190 gr bruine suiker</li>
@@ -28,12 +29,23 @@
 			<li>250 gr pure chocolade</li>
 		</ul>
 
-	</h2>Bereiding<h2>
+		<h2>Bereiding</h2>
 
-        <ol>
-            <li>Snij de malse boter in kleine blokjes en meng ze met de suiker door elkaar. Dat kan je doen met een mixer of keukenrobot. Snij de vanillestok in twee. Schraap er de zaadjes uit en meng deze onder het mengsel. Voeg al kloppend het ei toe. Roer er de melk door. Zeef de bloem en het bakpoeder samen en meng het dan onder het beslag. Meng er de stukjes chocolade onder.</li>
-            <li>Verwarm de oven op 180°C. Bedek een bakplaat met boterpapier. Leg afgestreken lepels deeg op het bakpapier. Laat voldoende afstand tussen de koekjes. Druk ze met een vork een beetje plat en bak ze vervolgens 20 minuten in de oven op 180°C goudgeel. Laat ze afkoelen.</li>
-        </ol>
-
-	<body></body>
+		<ol>
+			<li>
+				Snij de malse boter in kleine blokjes en meng ze met de suiker door
+				elkaar. Dat kan je doen met een mixer of keukenrobot. Snij de
+				vanillestok in twee. Schraap er de zaadjes uit en meng deze onder het
+				mengsel. Voeg al kloppend het ei toe. Roer er de melk door. Zeef de
+				bloem en het bakpoeder samen en meng het dan onder het beslag. Meng er
+				de stukjes chocolade onder.
+			</li>
+			<li>
+				Verwarm de oven op 180°C. Bedek een bakplaat met boterpapier. Leg
+				afgestreken lepels deeg op het bakpapier. Laat voldoende afstand tussen
+				de koekjes. Druk ze met een vork een beetje plat en bak ze vervolgens 20
+				minuten in de oven op 180°C goudgeel. Laat ze afkoelen.
+			</li>
+		</ol>
+	</body>
 </html>
