--- a/pannenkoeken.html
+++ b/pannenkoeken.html
@@ -5,33 +5,42 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>recepten</title>
 	</head>
-	<h1>Recepten voor het ideeal 4 uurtje</h1>
+	<body>
+		<h1>Recepten voor het ideeal 4 uurtje</h1>
 
-	<ul>
-		<li><a href="index.html">pannenkoeken</a></li>
-		<li><a href="pannenkoeken.html">Quatre-Quart</a></li>
-		<li><a href="cookies.html">cookies</a></li>
+		<ul>
+			<li><a href="index.html">pannenkoeken</a></li>
+			<li><a href="pannenkoeken.html">Quatre-Quart</a></li>
+			<li><a href="cookies.html">cookies</a></li>
+		</ul>
 
-		<img src="images/quatre-quart.jpeg"
-	</ul>
+		<img src="images/quatre-quart.jpeg" />
 
-	<h2>Ingredienten<h2>
-		
+		<h2>Ingredienten</h2>
+
 		<ul>
 			<li>200 gram zelfrijzend bakmeel</li>
 			<li>1 zakje vanillesuiker</li>
 			<li>200 gram suiker</li>
 			<li>200 gram boter</li>
-			<li>4 eieren </li>
+			<li>4 eieren</li>
 		</ul>
 
-	</h2>Bereiding<h2>
+		<h2>Bereiding</h2>
 
-        <ol>
-            <li>Strijk de cakevorm in met gesmolten boter en bestuif hem met bloem. </li>
-            <li>Klop de eieren met de suiker en de vanillesuiker schuimig, smelt de boter en voeg deze erbij. Zeef het zelfrijzend bakmeel en spatel het in porties onder het beslag. </li>
-            <li>Vul de bakvorm voor 3/4e met het beslag en zet hem vervolgens 30 à 35 minuten in een voorverwarmde oven op 180 graden. </li>
-        </ol>
-
-	<body></body>
+		<ol>
+			<li>
+				Strijk de cakevorm in met gesmolten boter en bestuif hem met bloem.
+			</li>
+			<li>
+				Klop de eieren met de suiker en de vanillesuiker schuimig, smelt de
+				boter en voeg deze erbij. Zeef het zelfrijzend bakmeel en spatel het in
+				porties onder het beslag.
+			</li>
+			<li>
+				Vul de bakvorm voor 3/4e met het beslag en zet hem vervolgens 30 à 35
+				minuten in een voorverwarmde oven op 180 graden.
+			</li>
+		</ol>
+	</body>
 </html>
