--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>recepten</title>
 	</head>
-	<h1>Recepten voor het ideeal 4 uurtje</h1>
+	<body>
+		<h1>Recepten voor het ideeal 4 uurtje</h1>
 
-	<ul>
-		<li><a href="index.html">pannenkoeken</a></li>
-		<li><a href="pannenkoeken.html">Quatre-Quart</a></li>
-		<li><a href="cookies.html">cookies</a></li>
+		<ul>
+			<li><a href="index.html">pannenkoeken</a></li>
+			<li><a href="pannenkoeken.html">Quatre-Quart</a></li>
+			<li><a href="cookies.html">cookies</a></li>
+		</ul>
 
-		<img src="images\pannekoeken.jpg.webp"
-	</ul>
+		<img src="images\pannekoeken.jpg.webp" />
 
-	<h2>Ingredienten<h2>
-		
+		<h2>Ingredienten</h2>
 
 		<ul>
 			<li>2 eieren</li>
@@ -25,15 +25,33 @@
 			<li>zout</li>
 		</ul>
 
-	</h2>Bereiding<h2>
+		<h2>Bereiding</h2>
 
-        <ol>
-            <li>Meng in een kom de eieren, de bloem, melk en een snufje zout met een garde of elektrische mixer. Als alle klontjes zijn verdwenen, kunnen de pannenkoeken gebakken worden.</li>
-            <li>Verwarm een beetje boter, margarine of olie in een koekenpan. Wacht even totdat de pan goed warm is, en verdeel dan met een soeplepel wat beslag in het midden van de pan. Beweeg je pan een beetje heen en weer zodat het beslag over de hele pan verdeeld is.</li>
-            <li>Bak de pannenkoek ongeveer 2-3 minuten totdat de bovenkant droog is. Draai de pannenkoek om en bak de pannenkoek nog ongeveer 1-2 minuten op de andere kant.</li>
-            <li>Leg de pannenkoek op een bord en dek het bord af met een grote deksel. Bak zo de rest van de pannenkoeken.</li>
-            <li>Vergeet niet om iedere keer een beetje extra boter of olie in de pan te doen, voordat je een nieuwe pannenkoek bakt.</li>
-        </ol>
-
-	<body></body>
+		<ol>
+			<li>
+				Meng in een kom de eieren, de bloem, melk en een snufje zout met een
+				garde of elektrische mixer. Als alle klontjes zijn verdwenen, kunnen de
+				pannenkoeken gebakken worden.
+			</li>
+			<li>
+				Verwarm een beetje boter, margarine of olie in een koekenpan. Wacht even
+				totdat de pan goed warm is, en verdeel dan met een soeplepel wat beslag
+				in het midden van de pan. Beweeg je pan een beetje heen en weer zodat
+				het beslag over de hele pan verdeeld is.
+			</li>
+			<li>
+				Bak de pannenkoek ongeveer 2-3 minuten totdat de bovenkant droog is.
+				Draai de pannenkoek om en bak de pannenkoek nog ongeveer 1-2 minuten op
+				de andere kant.
+			</li>
+			<li>
+				Leg de pannenkoek op een bord en dek het bord af met een grote deksel.
+				Bak zo de rest van de pannenkoeken.
+			</li>
+			<li>
+				Vergeet niet om iedere keer een beetje extra boter of olie in de pan te
+				doen, voordat je een nieuwe pannenkoek bakt.
+			</li>
+		</ol>
+	</body>
 </html>
